# cross-domain-degradation-transfer

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: ablation.yaml  cddt_bluronly.yaml  cddt_multidomain.yaml  cddt_noiseonly.yaml  cddt_weatheronly.yaml  corruption_transfer.yaml  cross_domain_transfer.yaml  dcnn_bluronly.yaml  dcnn_multidomain.yaml  dcnn_noiseonly.yaml  dcnn_weatheronly.yaml  default.yaml  eval_all.yaml  eval_imagenet_all.yaml  export_tfevent.yaml  fewshot.yaml  nafnet_bluronly.yaml  nafnet_multidomain.yaml  nafnet_noiseonly.yaml  nafnet_weatheronly.yaml  plot_tsne_abc.yaml
data/: README.md
notebooks/: 01_data_exploration.ipynb  02_model_visualization.ipynb  03_quick_demo.ipynb  README.md
notebooks/export/: 01_data_exploration.html  02_model_visualization.html  02_model_visualization_w_checkpth.html  02_model_visualization_w_checkpth20.html  03_quick_demo.html
notebooks/requests/: experiment_strategy.md  memo for seonyong
paper/: main.tex  references.bib
paper/tables/: ablation.tex  fewshot_results.tex  main_results.tex
results/corruption_transfer-N2B/: evaluation_results.csv
results/corruption_transfer-N2W/: config.yaml  evaluation_results.csv
results/crossdomain-zeroshot/: config.yaml  (+1 more)
scripts/: apply_corruptions.py  evaluate.py  export_tfevent.py  finetune_fewshot.py  plot_tsne_abc.py  run_fewshot_transfer.py  train.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_data.py  test_integration.py  test_losses.py  test_models.py
(+62 files in other folders)
